--- a/index.html
+++ b/index.html
@@ -4,81 +4,75 @@
   <meta charset="UTF-8" />
   <title>Bangkok Patana Primary Technology Assessment</title>
   <style>
-    /* Colour Variables (based on your provided values) */
+    /* Colour Variables from your specs */
     :root {
       --patana-grey:       #84776d;
-      --patana-montrachet: #991a36; 
+      --patana-montrachet: #991a36;
       --patana-blue:       #002857;
       --white:             #ffffff;
     }
 
-    /* Basic Reset & Body Styles */
+    /* Basic Reset */
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
+
     body {
       font-family: Arial, sans-serif;
       background-color: var(--patana-grey);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
-      padding: 1rem;
+      color: var(--white);
     }
 
     /* Header */
     header {
       background-color: var(--patana-blue);
-      color: var(--white);
-      width: 100%;
-      padding: 1.5rem 1rem;
       text-align: center;
-      margin-bottom: 1rem;
+      padding: 1.5rem;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     }
     header h1 {
-      font-size: 1.5rem;
       margin: 0;
+      font-size: 1.5rem;
     }
 
     /* Subheading */
     h2 {
-      color: var(--patana-blue);
-      margin-bottom: 1rem;
-      font-size: 1.2rem;
       text-align: center;
+      color: var(--patana-blue);
+      margin: 1rem 0;
+      font-size: 1.2rem;
     }
 
-    /* Container for Year Buttons:
-       2 columns, 3 rows => 6 total buttons. 
-       Increased gap and width to make buttons larger. */
+    /*
+      Main container for Year buttons:
+      - Exactly 2 columns, 3 rows.
+      - Takes up (roughly) the full screen height minus header & subheading space.
+      - Adjust 200px to suit your actual header/subheading height.
+    */
     .year-container {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-      gap: 1.5rem;
-      width: 90%;           /* Fill most of the screen width on mobile */
-      max-width: 600px;     /* Prevent columns from stretching too wide on desktop */
+      grid-template-rows: repeat(3, 1fr);
+      height: calc(100vh - 200px);
+      width: 100%;
+      max-width: 600px;
       margin: 0 auto;
+      gap: 1rem;
+      padding: 1rem;
     }
 
-    /* Year Group Buttons:
-       - Increased font size
-       - Aspect-ratio + min-height to ensure large, square-ish buttons 
-         for easy tapping on tablets/phones */
+    /* Year Group Buttons: Large "tiles" filling each grid cell */
     .year-button {
       background-color: var(--patana-montrachet);
-      color: var(--white);
       border: none;
       border-radius: 1rem;
-      aspect-ratio: 1;
-      min-height: 160px;    /* Forces a larger clickable area on smaller screens */
+      font-size: 1.5rem;
+      font-weight: bold;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 2rem;
-      font-weight: bold;
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
@@ -86,13 +80,13 @@
       background-color: var(--patana-blue);
     }
 
-    /* Responsive adjustments if desired */
+    /* Responsive tweaks for smaller screens */
     @media (max-width: 480px) {
       header h1 {
         font-size: 1.2rem;
       }
       .year-button {
-        font-size: 1.6rem;
+        font-size: 1.2rem;
       }
     }
   </style>
